--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="NewsMonkey is a news app which can be used to grab quick daily news bites.
-      If you are interested in news, weather , poltics and sports news, newsmonkey is for you! "
+      content="NewsFeed is a news app which can be used to grab quick daily news bites.
+      If you are interested in news, weather , poltics and sports news, NewsFeed is for you! "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NewsMonkey - Get your daily dose of new for free!</title>
+    <title>NewsFeed - Get your daily dose of new for free!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
